Marco: almost work done. estable version
